--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -16,8 +16,8 @@ main:
   - name: News
     url: '#news'
     weight: 50
-  - name: Publications
-    url: '#featured'
+  - name: Publication
+    url: '#publication'
     weight: 30
   - name: Contact
     url: '#contact'
