--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -8,16 +8,16 @@ main:
     url: '#about'
     weight: 10
   - name: Teaching
-    url: '#teaching'
+    url: '#Teaching'
     weight: 40
   - name: Research
-    url: '#research'
+    url: '#Research'
     weight: 20
   - name: News
-    url: '#news'
+    url: '#talks'
     weight: 50
   - name: Publication
-    url: '#publication'
+    url: '#publications'
     weight: 30
   - name: Contact
     url: '#contact'
