--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -8,7 +8,7 @@ main:
     url: '#about'
     weight: 10
   - name: Teaching
-    url: '#teaching copy'
+    url: '#teaching'
     weight: 45
   - name: Research projects
     url: '#Research'
