--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -10,15 +10,15 @@ main:
   - name: Teaching
     url: '#teaching'
     weight: 45
-  - name: Research projects
+  - name: Research
     url: '#Research'
     weight: 20
-  - name: Conference presentations
-    url: '#talks'
-    weight: 50
-  - name: Publications
-    url: '#publications'
-    weight: 30
+  #- name: Conference presentations
+   # url: '#talks'
+    #weight: 50
+ # - name: Publications
+  #  url: '#publications'
+   # weight: 30
   - name: Skills
     url: '#skills'
     weight: 55
